Fix publish/retire race and empty-bundle phantom findings
publish()/retire() did read -> check status -> save, which races under load:
concurrent publishes all read DRAFT, all passed the guard and all committed,
leaving duplicate PUBLISHED events and last-writer-wins on publishedBy. Swapped
in guarded conditional updates (status check in the WHERE clause) so one caller
wins and the rest get a clean 409 - same pattern as recordDryRun.

Also, resolveTargets treated an empty bundle like a bare resource and ran
Patient.*/Observation.* checks against the Bundle envelope, inventing findings.
Empty bundles now target nothing; real Bundle.* expressions still run.

Adds tests for the lost-race path and the empty-bundle handling.